refactor buffer split & page source